--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
           <div class="circle-outline"></div>
           <div class="circle-progress"></div>
         </div>
-        <!-- <p class="breaths">
+        <p class="breaths">
           Breaths remaining: <span class="no-of-breaths-left">3</span>
-        </p> -->
+        </p>
         <p class="instructions fade-in">Are you ready to restore sanity?</p>
         <button class="start">Yes, let's do it!</button>
       </div>
