--- a/index.html
+++ b/index.html
@@ -9,21 +9,23 @@
     <title>Sanity O'Clock!</title>
   </head>
   <body>
-    <div class="containerOuter">
-      <div class="input">
-        <label
-          >Select <br />Number<br />
-          of <br />Breaths:</label
-        >
-        <div class="selectContainer">
-          <select class="breath-input">
-            <option value="3">3 Breaths</option>
-            <option value="5">5 Breaths</option>
-            <option value="7">7 Breaths</option>
-          </select>
+    <div class="container-outer">
+      <div class="container-left">
+        <div class="input">
+          <label
+            >Select <br />Number<br />
+            of <br />Breaths:</label
+          >
+          <div class="container-select">
+            <select class="breath-input">
+              <option value="3">3 Breaths</option>
+              <option value="5">5 Breaths</option>
+              <option value="7">7 Breaths</option>
+            </select>
+          </div>
         </div>
       </div>
-      <div class="containerInner">
+      <div class="container-inner">
         <div class="circle-wrap">
           <div class="circle-outline"></div>
           <div class="circle-progress"></div>
