--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
           </div>
         </div>
       </div>
-      <div class="container-inner">
+      <div class="container-right">
         <div class="circle-wrap">
           <div class="circle-outline"></div>
           <div class="circle-progress"></div>
