change button text

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           Breaths remaining: <span class="no-of-breaths-left">3</span>
         </p>
         <p class="instructions fade-in">Are you ready to restore sanity?</p>
-        <button class="start">Yes</button>
+        <button class="start">Yes, I'm in.</button>
       </div>
     </div>
     <script src="/app.js"></script>
