Refactor label layout and fix spacing issues

--- a/index.html
+++ b/index.html
@@ -12,10 +12,12 @@
     <div class="container-outer">
       <div class="container-left">
         <div class="input">
-          <label
-            >Select <br />Number<br />
-            of <br />Breaths:</label
-          >
+          <label>
+            <span>Select</span>
+            <span>Number</span>
+            <span>of</span>
+            <span>Breaths</span>
+          </label>
           <div class="container-select">
             <select class="breath-input">
               <option value="3">3 Breaths</option>
