feat: add smiley face animation during breathing

--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
       <div class="container-right">
         <div class="circle-wrap">
           <div class="circle-outline"></div>
-          <div class="circle-progress"></div>
+          <div class="circle-progress">
+            <div class="smiley-face">
+              <div class="eye eye-left"></div>
+              <div class="eye eye-right"></div>
+              <div class="smile"></div>
+            </div>
+          </div>
         </div>
         <p class="breaths">
           Breaths remaining: <span class="no-of-breaths-left">3</span>
