--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
           Breaths remaining: <span class="no-of-breaths-left">3</span>
         </p>
         <p class="instructions fade-in">Are you ready to restore sanity?</p>
-        <button class="start">Yes, I'm in.</button>
+        <button class="start fade-in-delayed">Let's do this!</button>
       </div>
     </div>
     <script src="/app.js"></script>
