--- a/index.html
+++ b/index.html
@@ -31,10 +31,12 @@
         <div class="circle-wrap">
           <div class="circle-outline"></div>
           <div class="circle-progress">
-            <div class="smiley-face">
-              <div class="eye eye-left"></div>
-              <div class="eye eye-right"></div>
-              <div class="smile"></div>
+            <div class="smiley-face" aria-hidden="true">
+              <svg class="smiley-svg" viewBox="0 0 100 100" role="presentation" focusable="false">
+                <circle class="smiley-eye" cx="32" cy="40" r="7" />
+                <circle class="smiley-eye" cx="68" cy="40" r="7" />
+                <path class="smiley-mouth" d="M30 60 Q50 80 70 60" />
+              </svg>
             </div>
           </div>
         </div>
