Replace scale animation with width/height, remove smiley, fix mobile pixelation

--- a/index.html
+++ b/index.html
@@ -30,15 +30,7 @@
       <div class="container-right">
         <div class="circle-wrap">
           <div class="circle-outline"></div>
-          <div class="circle-progress">
-            <div class="smiley-face" aria-hidden="true">
-              <svg class="smiley-svg" viewBox="0 0 100 100" role="presentation" focusable="false">
-                <circle class="smiley-eye" cx="32" cy="40" r="7" />
-                <circle class="smiley-eye" cx="68" cy="40" r="7" />
-                <path class="smiley-mouth" d="M30 60 Q50 80 70 60" />
-              </svg>
-            </div>
-          </div>
+          <div class="circle-progress"></div>
         </div>
         <p class="breaths">
           Breaths remaining: <span class="no-of-breaths-left">3</span>
