--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
         <div class="circle-wrap">
           <div class="circle-outline"></div>
           <div class="circle-progress"></div>
+          <div class="smiley-face">
+            <div class="eye left-eye"></div>
+            <div class="eye right-eye"></div>
+            <div class="mouth"></div>
+          </div>
         </div>
         <p class="breaths">
           Breaths remaining: <span class="no-of-breaths-left">3</span>
